--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -4,4 +4,20 @@ body {
 .app {
   margin-top: 20px;
   margin-bottom: 20px;
+  margin-left: 50px;
+}
+h1 {
+  font-size: 50px;
+  font-weight: bold;
+}
+h2 {
+  font-size: 26px;
+}
+p {
+  font-size: 18px;
+  margin-bottom: 50px;
+}
+
+img {
+  border-radius: 10px;
 }
